--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^9.5.0",
+    "alchemy-sdk": "^2.2.3",
     "daisyui": "^2.41.0",
     "ethers": "^5.7.2",
     "pinia": "^2.0.23",
